objects/CRM_AudienceReport__c.object
<CustomObject>
    <fields>
        <fullName>Audiences__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Audience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_AudienceUploadJunction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Audience Upload Junction</label>
        <referenceTo>CRM_AudienceUploadJunction__c</referenceTo>
        <relationshipLabel>Audience Reports</relationshipLabel>
        <relationshipName>Audience_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_CampaignName__c</fullName>
        <formula>CRM_AudienceUploadJunction__r.CRM_Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Campaign__c</fullName>
        <externalId>true</externalId>
        <label>Campaign</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ControlGroup__c</fullName>
        <label>Control Group</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_DuplicateCriteria__c</fullName>
        <formula>CRM_AudienceUploadJunction__r.CRM_Campaign__r.CRM_ParentSegmentedCampaign__c+&apos;-&apos;+CRM_WundermanID__c</formula>
        <label>Duplicate Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_DuplicateWDMId__c</fullName>
        <formula>IF(CRM_WundermanDupe__c=true, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duplicate WDM Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Hospital__c</fullName>
        <label>Hospital</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_LIstOrderId__c</fullName>
        <label>LIst Order Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Audience Reports</relationshipLabel>
        <relationshipName>Audience_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Missing__c</fullName>
        <formula>IF( CRM_Member__c = NULL, 1, 0)</formula>
        <label>Missing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_ParentCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Segmented Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Audience Reports (Parent Campaign)</relationshipLabel>
        <relationshipName>Audience_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_SegmentF__c</fullName>
        <formula>CRM_AudienceUploadJunction__r.CRM_Campaign__r.Segment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Segment__c</fullName>
        <label>Segment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ShowInReport__c</fullName>
        <formula>NOT(CRM_AudienceUploadJunction__r.CRM_ToDelete__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Show In Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Supression__c</fullName>
        <label>Suppressions</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WundermanDupe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wunderman Dupe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_WundermanID__c</fullName>
        <description>This field we help us in identifying which Wunderman id is not available in SFDC</description>
        <externalId>true</externalId>
        <label>Wunderman ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_ZipCode__c</fullName>
        <label>ZIP Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing__c</fullName>
        <label>Missing</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Patient_Prospect__c</fullName>
        <label>Patient or Prospect</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Hospital__c</fullName>
        <description>Preferred hospital of a contact for matching Wunderman ID</description>
        <label>Preferred Hospital</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Copy_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Copy Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Missing__c</fullName>
        <formula>IF( CRM_Member__c = NULL, 1, 0)</formula>
        <label>Test Missing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Audience Report</label>
    <nameField>
        <displayFormat>AU-RN-{0000000}</displayFormat>
        <label>Audience Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audience Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>